site avec gestioon des états en utilisant redux
