# back/swagger.yaml
@@ -110,6 +110,43 @@ paths:
           description: Invalid Fields
         '500':
           description: Internal Server Error
+  /transaction:
+    put:
+      security:
+          - Bearer: []
+      tags:
+        - Transaction
+      summary: Transaction profil
+      description: Get transaction of User
+      parameters:
+        - in: header
+          name: Authorization
+          description: Attach Bearer JWT token
+          required: true
+        - in: body
+          name: body
+          description: Get transaction of profil
+          required: true
+          schema:
+            $ref: '#/definitions/UserProfile'
+      responses:
+        '200':
+          description: Successful operation
+          
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+        '405':
+          description: Validation exception
+      # security:
+      #   - petstore_auth:
+      #       - write:pets
+      #       - read:pets
+
+    
+
+
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -164,3 +201,8 @@ definitions:
         type: string
       lastName:
         type: string
+  Transaction:
+    type: object
+    properties:
+      transactionId:
+        type: integer
